--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,7 +7,8 @@ Description: Profitability of bundling strategies
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
+Depends: R (>= 3.1.0)
 URL: 
 RoxygenNote: 6.0.0
-
-
+Imports:
+    doParallel
