--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,13 @@ Description: Profitability of bundling strategies
 License: GPL (>= 2)
 Encoding: UTF-8
 LazyData: true
-Depends: R (>= 3.1.0)
+Depends:
+    R (>= 3.3.2),
+    doParallel (>= 1.0.10)
 URL: 
 RoxygenNote: 6.0.0
-Imports:
-    doParallel
+
+
+
+
+
