--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,4 +11,6 @@ export(Prices.PC)
 export(Profit.MB)
 export(Profit.PB)
 export(Profit.PC)
+export(Zero.Profit.MB)
+export(Zero.Profit.PB)
 export(Zero.Profit.PC)
